Prototype control of modifying, adding and removing rulesets and rules.  Also CSS fix for input fields getting too large for their space.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,13 +80,13 @@ body {
 
 /* Inputs */
 input, select, textarea {
-    width: 100%;
-    padding: 10px;
+    width: 95%;
+    padding: 5px;
     margin-top: 10px;
     background-color: #444444;
     color: #e0e0e0;
     border: none;
-    border-radius: 5px;
+    border-radius: 35px;
 }
 
 /* Footer */
